<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Aproximador de Funciones</string>
    <string name="como_funciona">Cómo funciona?</string>
    <string name="guia_teorica">Guía de referencia</string>
    <string name="imagen_error">imagen no encontrada</string>
    <string name="calcular">Calcular!</string>
    <string name="empezar_a_aproximar_funciones">Empezar a aproximar funciones</string>
    <string name="t1"><b><big>Introducción</big></b>
        \nEl objetivo de esta aplicación es, a partir de dos o más puntos (x;y) provistos por el usuario, calcular una función y = f(x) que pase por esos puntos o tan cerca de todos como sea posible.
        \n\n<b><big>Forma de la función</big></b>
        \nEs importante determinar la forma que se desea que tenga la función, ya que puede haber muchas funciones distintas que pasen por los puntos dados.
        \n\nPor ejemplo:\nSi se busca una función que pase por los puntos (1;3) y (2;5), dos posibles soluciones serían las siguientes:
    </string>
    <string name="t2">
        A modo de ejemplo se muestran dos funciones, pero podrían haber muchas válidas para los puntos que indiquemos. Es por esto que el usuario deberá indicar qué forma desea que tenga la función, dentro de 5 posibilidades:
        \n● Recta \n● Parábola\n● Exponencial\n● Logarítmica\n● Determinar automáticamente
        \n\nSegún que se elija, la aplicación buscará la función con esa forma que más se acerque a pasar por los puntos que se indiquen.
        En caso de que el usuario no tenga certeza sobre la forma de la función, existe una opción para que la aplicación eleja automáticamente la mejor posible (implica ver un anuncio).

        \n\n<b><big>Desviación</big></b>
        \nMuchas veces ocurrirá que no exista una función contínua que pase exáctamente por todos los puntos indicados, por lo que en esos casos se buscará aquella función que pase tan cerca como sea posible de todos los puntos.
        Y aquí aparece la <i>desviación</i>, que sirve para medir el \"error\" entre los puntos y la función.
        \n\n<u>Para hacerlo fácil de entender</u>:\nMientras <b>más grande</b> sea la desviación, <b>peor</b> es la función. Y si la desviación vale <b>0 (cero)</b>, la función pasa <b>perfectamente</b> por los puntos.
        \n\nPor ejemplo:\nSi se busca una recta que pase por los puntos (1;3), (1;5) y (3;5) a simple vista se nota que una linea recta no puede pasar por los tres a la vez, por lo que se busca una recta que pase tan cerca de todos como sea posible. En este caso, la función encontrada tiene una desviación de 2 (dos), que si bien no es perfecto, es cercano a cero, por lo cual es un resultado bastante preciso.
    </string>
    <string name="t3" tools:ignore="Typos">\n
        El procedimiento matemático utilizado para calcular las funciones <b>siempre obtiene la mejor función</b> posible según la \"forma de la función\" elegida y los puntos dados, por lo cual, si se obtiene una desviación muy grande, posiblente lo mejor sea <b>intentar con una \"forma de función\" diferente</b>, y ver si se encuentra una más adecuada.
        \n\nEl proceso de probar distintas formas hasta encontrar la mejor puede ser tedioso, y en esos casos se recomienda la opción para <b>determinar la forma automáticamente</b>.

        \n\n<b><big>Usabilidad</big></b>
        \nEn la pantalla \"Por qué puntos pasa la función?\" el usuario debe cargar por lo menos 1 (un) punto y puede agregar hasta 50 (cincuenta), y si al calcular la función quedan filas vacías o con un solo dato cargado, simplemente son ignoradas y se procede con normalidad.
        \n\nEn el caso de que se cargue un único punto, o en el que la función pueda ser discontinua, se generará una función constante acorde a lo ingresado.
        \n\n<b><big>Consideraciones</big></b>
        \nSi se ingresan tres o más puntos, y se pide graficar una parábola, existe la posibilidad que se grafique una recta, en los casos que todos los puntos formen una linea recta.
        \n\nY del mismo modo puede ocurrir si se pide graficar una exponencial, en el caso que los puntos dados sean valores muy grandes.
    </string>

    <string name="titulo_forma">Qué forma tendrá la función?</string>
    <string name="determinar_auto">Determinar automáticamente</string>
    <string name="forma_logaritmica">Forma Logarítmica</string>
    <string name="forma_exponencial">Forma Exponencial</string>
    <string name="forma_de_parabola">Forma de Parábola</string>
    <string name="forma_de_recta">Forma de Recta</string>
    <string name="titulo_puntos">Por qué puntos pasa la función?</string>
    <string name="coordenada_x">Coordenada X</string>
    <string name="coordenada_y">Coordenada Y</string>
    <string name="desviacion">"Desviación: "</string>
    <string name="ver_anuncio">Ver anuncio?</string>
    <string name="opcion_requiere_anuncio">Esta opción requiere ver un anuncio</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="error_anuncio">Error al cargar el anuncio, revisa tu conexión</string>
    <string name="error_sin_puntos">No hay puntos válidos</string>
    <string name="error_max_puntos">Límite de puntos alcanzado</string>
    <string name="error_min_puntos">Debes incluir por lo menos 1 punto</string>
    <string name="cargando_anuncio">Cargando anuncio</string>
    <string name="nuevo_punto">Nuevo Punto</string>
    <string name="siguiente">Siguiente</string>

    <!--  id anuncios, 1) prueba  2) final  -->

    <string name="id_banner_forma">ca-app-pub-3940256099942544/6300978111</string>
    <!--    <string name="id_banner_forma">ca-app-pub-8058093585220532/7840727730</string>-->
    <string name="id_banner_menu">ca-app-pub-3940256099942544/6300978111</string>
    <!--    <string name="id_banner_menu">ca-app-pub-8058093585220532/3121903461</string>-->
    <string name="id_rewarded_auto">ca-app-pub-3940256099942544/5224354917</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_resultado">Resultado</string>
    <string name="titulo_tutorial">Guia de usuario</string>
    <string name="title_activity_main">MainActivity</string>
    <!--    <string name="id_rewarded_auto">ca-app-pub-8058093585220532/2717313433</string>-->

</resources>