<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".legacy.interfaz_legacy.fragments.TutorialFragment"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTutorial"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        android:elevation="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/titulo_tutorial"
            android:gravity="center"
            style="@style/ToolbarTitulo"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewTutorial"
            android:text="@string/t1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@drawable/tutorial_recta"
            android:layout_marginHorizontal="32dp"
            android:contentDescription="@string/imagen_error" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@drawable/tutorial_cuadratica"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/imagen_error" />

        <TextView
            style="@style/TextViewTutorial"
            android:text="@string/t2"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:srcCompat="@drawable/tutorial_desviacion"
            android:layout_marginHorizontal="32dp"
            android:contentDescription="@string/imagen_error" />

        <TextView
            style="@style/TextViewTutorial"
            android:text="@string/t3"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

    </ScrollView>
</LinearLayout>