<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interfaz.fragments.PuntosFragment"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPuntos"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/titulo_puntos"
            android:gravity="center"
            style="@style/ToolbarTitulo"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
    android:id="@+id/linearLayoutCabeceraTabla"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
        android:background="@color/colorPrimary"
    app:layout_constraintTop_toBottomOf="@id/toolbarPuntos"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/coordenada_x"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/roboto_light"
            android:textSize="18sp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/coordenada_y"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/roboto_light"
            android:textSize="18sp"
            android:textColor="#000"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutCabeceraTabla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnAddFila"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/tablaPuntos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAddFila"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/nuevo_punto"
        android:background="@drawable/btn_round"
        android:textColor="#FFFF"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginHorizontal="24dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCalcular"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/siguiente"
        android:background="@drawable/btn_round"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="#FFFF"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>