<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".legacy.interfaz_legacy.fragments.FormaFuncionFragment">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarForma"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        android:elevation="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/titulo_forma"
            android:gravity="center"
            style="@style/ToolbarTitulo"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarForma"
        app:layout_constraintBottom_toTopOf="@id/adViewFormaFuncion">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardLineal"
                style="@style/CardTipoFuncion"
                android:tag="recta"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/ImageViewTipoFuncion"
                        android:contentDescription="@string/imagen_error"
                        app:layout_constraintBottom_toTopOf="@+id/textView5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_lineal" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/forma_de_recta"
                        android:textColor="#B2000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardParabola"
                style="@style/CardTipoFuncion"
                android:tag="parabola"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/ImageViewTipoFuncion"
                        android:contentDescription="@string/imagen_error"
                        app:layout_constraintBottom_toTopOf="@+id/textView6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_parabola" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/forma_de_parabola"
                        android:textColor="#B2000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardExponencial"
                style="@style/CardTipoFuncion"
                android:tag="exponencial"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/ImageViewTipoFuncion"
                        android:contentDescription="@string/imagen_error"
                        app:layout_constraintBottom_toTopOf="@+id/textView8"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_exponencial" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/forma_exponencial"
                        android:textColor="#B2000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardLogaritmica"
                style="@style/CardTipoFuncion"
                android:tag="logaritmica"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/ImageViewTipoFuncion"
                        android:contentDescription="@string/imagen_error"
                        app:layout_constraintBottom_toTopOf="@+id/textView7"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_logaritmica" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/forma_logaritmica"
                        android:textColor="#B2000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAutomatica"
                style="@style/CardTipoFuncion"
                android:tag="automatic"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/ImageViewTipoFuncion"
                        android:contentDescription="@string/imagen_error"
                        app:layout_constraintBottom_toTopOf="@+id/textView9"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/automatic" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/determinar_auto"
                        android:textColor="#B2000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewFormaFuncion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        app:adSize="BANNER"
        app:adUnitId="@string/id_banner_forma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>